...
//        // Intentionally left empty - SO post -- http://stackoverflow.com/questions/24103069/swift-add-swipe-to-delete-tableviewcell
//    }
    
    // Add the Swipe-to-Delete functionality
    override func tableView(tableView: UITableView, editActionsForRowAtIndexPath indexPath: NSIndexPath) -> [UITableViewRowAction]? {
        
        let deleteAction = UITableViewRowAction(style: .Default, title: "Delete") {action in
            // Handle delete
            self.appTaskList.removeTaskFromList(self.appTaskList.taskList[indexPath.row])
            self.tableView.deleteRowsAtIndexPaths([indexPath], withRowAnimation: .Fade)
        }
        
//        let editAction = UITableViewRowAction(style: .Normal, title: "Edit") {action in
...
